# TBD_Pedestrian_Simulation

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pedsim_sensors/: pedsim_obstacle_sensor  pedsim_occlusion_sensor  pedsim_people_sensor
devel/lib/pedsim_simulator/: pedsim_simulator  simulate_diff_drive_robot
devel/lib/pedsim_visualizer/: pedsim_visualizer_node
devel/lib/pkgconfig/: beginner_tutorials.pc  libpedsim_original.pc  pedsim.pc  pedsim_gazebo_plugin.pc  pedsim_msgs.pc  pedsim_sensors.pc  pedsim_simulator.pc  pedsim_srvs.pc  pedsim_utils.pc  pedsim_visualizer.pc  spencer_human_attribute_msgs.pc  spencer_social_relation_msgs.pc  spencer_tracking_msgs.pc  spencer_tracking_rviz_plugin.pc  spencer_vision_msgs.pc  zed_interfaces.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/libpedsim_original/cmake/: libpedsim_originalConfig.cmake
devel/share/pedsim/cmake/: pedsimConfig.cmake
devel/share/pedsim_gazebo_plugin/cmake/: pedsim_gazebo_pluginConfig.cmake
devel/share/pedsim_msgs/cmake/: pedsim_msgs-msg-extras.cmake  pedsim_msgs-msg-paths.cmake  pedsim_msgsConfig.cmake
devel/share/pedsim_sensors/cmake/: pedsim_sensorsConfig.cmake
devel/share/pedsim_simulator/cmake/: pedsim_simulatorConfig.cmake
devel/share/pedsim_srvs/cmake/: pedsim_srvs-msg-extras.cmake  pedsim_srvsConfig.cmake
devel/share/pedsim_utils/cmake/: pedsim_utilsConfig.cmake
devel/share/pedsim_visualizer/cmake/: pedsim_visualizerConfig.cmake
devel/share/spencer_human_attribute_msgs/cmake/: spencer_human_attribute_msgs-msg-extras.cmake  spencer_human_attribute_msgs-msg-paths.cmake  spencer_human_attribute_msgsConfig.cmake
devel/share/spencer_social_relation_msgs/cmake/: spencer_social_relation_msgs-msg-extras.cmake  (+2 more)
pedsim_ros/new_simulator/: example01.cpp
pedsim_ros/pedsim_simulator/: example01.cpp
pedsim_ros/pedsim_simulator/src/: config.cpp
src/pedsim_ros/new_simulator/: new_pedestrians.launch
src/pedsim_ros/pedsim_msgs/: CMakeLists.txt
src/pedsim_ros/pedsim_simulator/: CMakeLists.txt  example01.cpp  new_pedestrians.launch  package.xml
src/pedsim_ros/pedsim_simulator/launch/: new_pedestrians.launch  simulator.launch
src/pedsim_ros/pedsim_simulator/src/: .example01.cpp.swo  .example01.cpp.swp  50  example01.cpp
(+30 files in other folders)
